Removed uploaded photos, added field checking